--- a/commons/pom.xml
+++ b/commons/pom.xml
@@ -12,6 +12,13 @@
     <groupId>com.pinterest.hdfsbackup</groupId>
     <artifactId>commons</artifactId>
     <version>0.1</version>
+    <dependencies>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.2</version>
+        </dependency>
+    </dependencies>
     <packaging>jar</packaging>
 
 
