--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>commons</module>
         <module>s3tools</module>
         <module>test</module>
+        <module>s3get</module>
     </modules>
 
     <dependencies>
@@ -21,12 +22,6 @@
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
             <scope>provided</scope>
-            <version>1.0.3</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.hadoop</groupId>
-            <artifactId>hadoop-tools</artifactId>
             <version>1.0.3</version>
         </dependency>
 
