--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-core</artifactId>
-            <scope>provided</scope>
+            <!-- <scope>provided</scope> -->
             <version>1.0.3</version>
         </dependency>
 
