--- a/s3get/pom.xml
+++ b/s3get/pom.xml
@@ -9,8 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>s3get</artifactId>
-
+    <artifactId>s3copy</artifactId>
 
     <dependencies>
 
