--- a/compare-file/pom.xml
+++ b/compare-file/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>compare-file-checksum</artifactId>
+    <artifactId>compare-file</artifactId>
 
     <dependencies>
 
@@ -54,7 +54,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.pinterest.hdfsbackup.filechecksum.CompareFileChecksum</mainClass>
+                                    <mainClass>com.pinterest.hdfsbackup.filechecksum.CompareFile</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
