Add tool to cleanup garbage from multipart upload.
A multipart upload may fail for various reasons. The already-uploaded
parts are not cleaned up by S3.  We need to run this tool
to find all in-progress multiparts upload that are sufficiently old,
and abort these uploads, so as to free up the space.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>s3copy</module>
         <module>compare-file</module>
         <module>compare-dir</module>
+        <module>cleanup-multipart-uploads</module>
     </modules>
 
     <dependencies>
