Add cleanup_dir tool to trim old hlogs from hdfs.

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>compare-file</module>
         <module>compare-dir</module>
         <module>cleanup-multipart-uploads</module>
+        <module>cleanup-dir</module>
     </modules>
 
     <dependencies>
