When S3upload, use copyStreamWithProgress to report read HDFS progress.
It is very helpful to let the stream copy thread report progress
using the Mapper's reporter.

Otherwise an upload of large HDFS dir often sees the mapper tasks
timeout:  failed to report status for 600 sec. Killing...

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>0.1</version>
 
     <modules>
-        <module>commons</module>
+        <module>hdfsbackup-commons</module>
         <module>s3tools</module>
         <module>test</module>
         <module>s3copy</module>
