--- a/compare-file/pom.xml
+++ b/compare-file/pom.xml
@@ -15,7 +15,7 @@
 
         <dependency>
             <groupId>com.pinterest.hdfsbackup</groupId>
-            <artifactId>commons</artifactId>
+            <artifactId>hdfsbackup-commons</artifactId>
             <version>0.1</version>
         </dependency>
 
