--- a/hdfsbackup-commons/pom.xml
+++ b/hdfsbackup-commons/pom.xml
@@ -10,7 +10,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.pinterest.hdfsbackup</groupId>
-    <artifactId>commons</artifactId>
+    <artifactId>hdfsbackup-commons</artifactId>
     <version>0.1</version>
 
     <dependencies>
