--- a/distcp/pom.xml
+++ b/distcp/pom.xml
@@ -38,7 +38,7 @@
                             <transformers>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.pinterest.hdfsbackup.s3copy.Main</mainClass>
+                                    <mainClass>com.pinterest.hdfsbackup.distcp.DistCp</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
